--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,5 +17,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile "com.google.android.gms:play-services-location:${rootProject.ext.gmsVersion}"
     compile "com.facebook.react:react-native:+"
 }
